<resources>
    <string name="app_name">Book Store</string>
    <string name="Product_name">Book Name</string>
    <string name="title">Title</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="Product_phone_number">Phone</string>
    <string name="price">Price</string>
    <string name="price_unit">L.E</string>
    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a New Books</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>
    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <string name="action_All_delete">Delete All Books</string>
    <string name="empty_view_msg">Click Book button to start adding books.</string>
    <string name="add_Image">Add Image</string>
    <string name="price_required">Price Required</string>
    <string name="quantity_default_value">0</string>
    <string name="quantity_required">Quantity Required</string>
    <string name="supplier_required">Supplier Required</string>
    <string name="phone_required">Phone Required</string>
    <string name="buy_btn_text">buy</string>
    <string name="Out_of_stock">out of stock</string>
    <string name="edit_action_title">Edit</string>
    <string name="edit_title">Edit a Book</string>
    <string name="add_title">Add a Book</string>
    <string name="quantity_msg">Quantity can not be less than 0</string>
    <string name="discard_edit_message">Do you want to discard changes?</string>
    <string name="delete_positive_btn">Yes</string>
    <string name="delete_negative_btn">Cancel</string>
    <string name="delete_successful_msg">Book deleted</string>
    <string name="image_title">Choose Image From</string>
    <string name="delete_All_successful_msg">All Books deleted</string>
    <string name="delete_unsuccessful_msg">Deletion failed</string>
    <string name="data_empty_message">Please input required spaces</string>
    <string name="delete_message">Do you want to delete this book?</string>
    <string name="delete_All_message">Do you want to delete All books?</string>
    <string name="name_required">Name Required</string>
    <string name="price_list">Price\u0020\u0020:</string>
    <string name="stock_list">in stock\u0020:</string>






</resources>
