<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/book_item_height"
    android:layout_marginBottom="@dimen/book_item_vertical_margin"
    android:layout_marginTop="@dimen/book_item_vertical_margin"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="book Title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_list"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/book_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/padding_list"
                    android:textColor="#0288D1"
                    tools:text="  19.99" />

                <TextView
                    android:id="@+id/book_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_list"
                    android:text="@string/price_unit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/book_quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/horizontal_margin"
                    android:gravity="center"
                    android:text="@string/stock_list"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/book_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#0288D1"
                    tools:text="100" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="@dimen/book_mins_btn_height"
        android:layout_height="@dimen/book_mins_btn_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/buy_icon" />

</RelativeLayout>